<resources>
    <string name="app_name">UNI-EAT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hide_bottom">hideBottom</string>
    <string name="empty"> </string>

    <string name="exit_txt">\'뒤로\' 버튼을 한번 더 누르면 종료 됩니다.</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="searchResult">검색결과</string>
    <string name="recommend_order">추천순</string>
    <string name="search_hint">지역 / 매장명 / 메뉴 검색</string>
    <string name="recent_words">최근검색어</string>
    <string name="turnOn_GPS">"단말기의 GPS를 켜주세요."</string>
    <string name="location_permission_deniedMessage">지도에서 내 위치를 확인하여 서비스를 이용하기 위해 권한이 필요합니다. (필수권한)</string>
    <string name="login_text">가입을 진행할 경우 , 아래의 정책에 동의한 것으로 간주됩니다. \n서비스 이용약관 및 개인정보처리방침</string>
    <string name="phone_number">전화번호</string>
    <string name="location">지역</string>
    <string name="price">가격대</string>
    <string name="address">상세주소</string>
    <string name="menu">메뉴</string>
    <string name="article">아티클</string>
    <string name="article_post">아티클 작성</string>
    <string name="notice_add">*추가할 내용이 있다면 <u>여기</u>를 눌러주세요.</string>
    <string name="home">홈</string>
    <string name="bookMark">북마크</string>
    <string name="event">이벤트</string>
    <string name="my">마이</string>
    <string name="map">지도</string>

    <string name="event_typo">오늘은\n어떤 이벤트들이\n있을까?</string>
    <string name="event_sort_deadline">마감순</string>
    <string name="event_sort_newest">최신순</string>
    <string name="event_sort_button">확인</string>
    <string name="latest">최신</string>
    <string name="recommend">추천</string>
    <string name="event_notice">이벤트 유의사항</string>
    <string name="use_coupon">쿠폰 사용하기</string>
    <string name="end_event">이벤트 종료</string>
    <string name="used_event">사용 완료</string>

    <string name="report">신고</string>
    <string name="report_hint">내용을 입력하세요</string>
    <string name="report_toast">내용을 입력해주세요</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="report_complete">신고가\n 완료되었습니다</string>
    <string name="report_cancel_qes">작성을 취소하시겠습니까?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="articleExplain">대학생 에디터들이 작성한\n찐 맛집 아티클을 확인해보세요!</string>
    <string name="test_content">Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus. Lorem ipsum dolor sit amet consectetur. Phasellus vel ultricies sed leo. Gravida vestibulum volutpat enim fringilla id enim vitae. Fermentum adipiscing quis facilisis morbi tristique. Neque viverra in non pretium diam netus.</string>
    <string name="add_image_text">이미지 가져오기</string>
    <string name="title">제목</string>
    <string name="add_address_text">위치추가</string>
    <string name="add_address_explain">*식당이 나오지 않을 경우 , 직접 등록이 가능해요!</string>
    <string name="add_content_hint">가게에서의 경험을 작성해주세요.\n (10자 이상 ~ 10000자 이하)</string>
    <string name="hashTag">해시태그</string>
    <string name="my_page">마이페이지</string>
    <string name="my_profile">내 프로필</string>
    <string name="school_certification">학교 인증하기</string>
    <string name="my_write_article">내가 쓴 아티클</string>
    <string name="empty_article">우리 학교 맛집을\n 소개해주세요!</string>
    <string name="home_explain">한 눈에 알아보는\n학교 맛집 지도</string>
    <string name="home_what_kindof_qes">어떤 맛집이 필요하세요?</string>
    <string name="home_head_text">여긴 어때 ~ ?</string>
    <string name="home_text">유니잇 선정한 이번주 맛집</string>
    <string name="home_head_text2">우리학교 맛집 이벤트</string>
    <string name="gallery_permission">휴대폰 갤러리에 접근하기 위해 권한이 필요합니다. (이미지 변경시 필수권한)</string>
    <string name="notice">공지사항</string>
    <string name="service_info">서비스 소개</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="location_terms">위치기반 서비스 이용약관</string>
    <string name="inquiry">문의 / 소통하기</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="edit_account">계정 관리</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">탈퇴</string>
    <string name="change_image">사진 변경하기</string>
    <string name="nick">닉네임</string>
    <string name="nick_form_hint">한글 5자리 또는 영어 10글자 이하</string>
    <string name="introduce_hint">50자 내로 자기소개를 작성해주세요</string>
    <string name="introduce">자기소개</string>
    <string name="email_verify_text">인증을 위해 학교 이메일을 \n입력해주세요.</string>
    <string name="no_email">가입되지 않은 이메일입니다.</string>
    <string name="char_limit_5">5글자 이내로 작성해주세요.</string>
    <string name="included_sp">특수문자가 포함되어 있습니다.</string>
    <string name="duplicated_nick">이미 존재하는 닉네임입니다.</string>
    <string name="done_email">학교 인증 완료!</string>
    <string name="c_text">가입을 축하합니다!</string>
    <string name="c_text2">님, 가입을 축하합니다!</string>

</resources>