<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.foorun.uni_eat.feature.map.shop_detail.fragment.ShopDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_option"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <kr.foorun.uni_eat.base.view.base.view_pager2.BaseViewPager2
                    android:id="@+id/pager2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setPagerHeight="@{@dimen/article_post_image_height}" />

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseShopConstraintView
                    android:id="@+id/shopInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:shopName="카인드"
                    app:shopNick="정건"
                    app:shopKind="레스토랑"
                    app:shopContent="분위기 좋은 어쩌구저쩌구"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseInformation
                    android:layout_marginTop="29dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:information="@string/phone_number"
                    app:value="010 1234 1234" />

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseInformation
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:information="@string/location"
                    app:value="영일중" />

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseInformation
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:information="@string/price"
                    app:value="20,000원 대" />

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseInformation
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:information="@string/address"
                    app:value="경기 수원시 영통구" />

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseInformation
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onClickMenu()}"
                    app:information="@string/menu"
                    app:show_arrow="true" />
                
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/menu_recycler"
                    app:visible="@{viewModel.isShowMenu()}"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_tag_recycler"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            
                <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notice_add"
                    android:textSize="15sp"
                    android:textColor="@color/small_text"/>

                <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
                    android:layout_marginTop="41dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="21dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/article"
                    android:textSize="21sp"
                    android:textColor="@color/large_text"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/article_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:spanCount="2"
                    tools:listitem="@layout/item_article_thumbnail"
                    android:layout_marginTop="13dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
            android:id="@+id/white_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.backClicked()}"
            android:src="@drawable/arrow_left_white"
            android:layout_marginTop="@dimen/back_button_margin_top_73"
            android:layout_marginStart="@dimen/back_button_margin_start_21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <kr.foorun.uni_eat.base.view.base.base_layout.BaseBottomOptionView
            android:id="@+id/bottom_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>